--- a/q5.html
+++ b/q5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>KL-Coding Cup</title>
+    <title>KL Coding Cup</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -35,7 +35,7 @@
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
       <aside id="colorlib-aside" role="complementary" class="js-fullheight">
         <h1 id="colorlib-logo" class="mb-4 mb-md-5">
-          <a href="index.html" style="background-color: white">KL-CC</a>
+          <a href="index.html" style="background-color: white">KLCC</a>
         </h1>
         <nav id="colorlib-main-menu" role="navigation">
           <ul>
@@ -54,7 +54,7 @@
             </li>
 
             <li>
-              <h3><a href="past_content.html">Murder Mystery Round</a></h3>
+              <h3><a href="past_content.html">Escape Room Round</a></h3>
             </li>
             <li>
               
@@ -64,22 +64,22 @@
             </li>
           </ul>
           <h3 style="padding-top: 100%">
-            <a href="https://github.com/asian-mario">Made By: Rangga & Aniish</a>
+            <a href="https://github.com/asian-mario">Made By: Rangga & Awab</a>
           </h3>
         </nav>
       </aside>
       <div id="colorlib-main">
         <section class="ftco-section ftco-no-pt ftco-no-pb">
             <div style="padding-left: 5rem; padding-right: 5rem; padding-top: 2rem; padding-bottom: 0.5rem;">
-                <h1 class="colorlib-heading">Detective's Mood</h1>
+                <h1 class="colorlib-heading">Good Mood</h1>
 <p style="color: #fff;">
-    The stress of the case is taking a toll. Each day, your mood fluctuates wildly. Some days are great, and others are filled with despair. Track the longest streak of "good mood days" to determine when you're most effective.
+    The stress of the job is taking a toll. Each day, your mood fluctuates wildly. Some days are great, and others are filled with despair. Track the longest streak of "good mood days" to determine when you're most effective.
     <br /><br />
-    Input is denoted by a list of integers `nums`. 
+    Input is denoted by a list of integers <b>nums</b>. 
     <ul>
-      <li>Each integer represents your mood score for a particular day: positive values are good days, and negative values are bad days.  </li>
+      <li>Each integer represents your mood score for a particular day: positive values are good days, and negative values are bad days. </li>
       <li>Your task is to find the maximum sum of a contiguous subarray (a sequence of consecutive days).  
-        For example, given `nums = [-2, 1, -3, 4, -1, 2, 1, -5, 4]`, the maximum sum is `6` for the subarray `[4, -1, 2, 1]`.
+        For example, given <b>nums</b> = [-2, 1, -3, 4, -1, 2, 1, -5, 4]', the maximum sum is '6' for the subarray [4, -1, 2, 1].
         </li>
   
     </ul>
