Update title and content in q6.html

--- a/q6.html
+++ b/q6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>KL-Coding Cup</title>
+    <title>KL Coding Cup</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -35,7 +35,7 @@
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
       <aside id="colorlib-aside" role="complementary" class="js-fullheight">
         <h1 id="colorlib-logo" class="mb-4 mb-md-5">
-          <a href="index.html" style="background-color: white">KL-CC</a>
+          <a href="index.html" style="background-color: white">KLCC</a>
         </h1>
         <nav id="colorlib-main-menu" role="navigation">
           <ul>
@@ -54,7 +54,7 @@
             </li>
 
             <li>
-              <h3><a href="past_content.html">Murder Mystery Round</a></h3>
+              <h3><a href="past_content.html">Escape Room Round</a></h3>
             </li>
             <li>
               
@@ -64,37 +64,33 @@
             </li>
           </ul>
           <h3 style="padding-top: 100%">
-            <a href="https://github.com/asian-mario">Made By: Rangga & Aniish</a>
+            <a href="https://github.com/asian-mario">Made By: Rangga & Awab</a>
           </h3>
         </nav>
       </aside>
       <div id="colorlib-main">
         <section class="ftco-section ftco-no-pt ftco-no-pb">
             <div style="padding-left: 5rem; padding-right: 5rem; padding-top: 2rem; padding-bottom: 0.5rem;">
-                <h1 class="colorlib-heading">Safehouse Access</h1>
+                <h1 class="colorlib-heading">Zero Sum</h1>
 <p style="color: #fff;">
-    The mastermind’s safehouse is at the top of a towering staircase. The only way to reach the safehouse is by climbing the stairs, and the guards have set a rule: you can climb either 1 or 2 steps at a time. Determine how many distinct ways you can climb to the top. <br /><br />
-    Input is denoted by an integer n, the total number of steps in the staircase.
+    Input is denoted by an array <b>N</b>.
     <ul>
-      <li>Each step can be taken as a single step or as part of a double step.</li>
-      <li>The output should be the total number of distinct ways to climb to the top.
-        For example, for n = 4, there are 5 distinct ways to climb:
-        (1+1+1+1), (1+2+1), (2+1+1), (1+1+2), (2+2).</li>
+      <li>Your task is to find the length of the longest contiguous subarray such that its sum is 0.</li>
+      <li>A contiguous subarray is a sequence of elements in an array that are adjacent to each other, e.g. in [1,2,3,4,5] one possible contiguous subarray is [1,2,3] or [2,3,4]</li>
     </ul>
+    <h3 style="color: #FFF">Example Case</h3>
+      Input: N = [2, -2, 3, -3, 4]<br>
+      Output: 4<br>
+      Explanation : [2, -2, 3, -3] sums to 0<br>
     <br></br>
     <h3 style="color: #FFF">Case 1</h3>
     <code>
-      Input: n = 5 <br>
+       Input: N = [7, 3, -4, 2, -6, 5, 1, -3, 9, -2, 4, -8, 6, -1, 2, -7, 8, -3, 5, -5, 11, -4, 3, 2, -6, 7, -9, 4, 1, -3, 6, -2, 8, -6, 5, -1, 7, -4, 2, -8, 9, -3, 4, -5, 6, 2, -7, 3, -1, 5, -2, 8, -6, 4, -3, 7, -5, 2, 1, -4, 6, -2, 9, -7, 3, -1, 4, -6, 8, -5, 2, 7, -3, 1, -4, 6, -2, 5, -7, 9, 3, -8, 6, 4, -5, 7, -3, 2, -6, 8, -1, 5, -4, 9, -7, 3, -2, 6, -8, 4, 2, -5, 7, -3, 1, -6, 8, -4, 5, -2, 9, -7, 3, -1, 6, -5, 2, -8, 4, 7, -3, 5, -6, 8, -2, 1, -4, 9, -7, 3, -5, 6, -1, 2, -8, 7, -4, 5, -3, 6, 2, -7, 8, -5, 4, -1, 3, -6, 9, -2]<br>
     </code>
     <br></br>
     <h3 style="color: #FFF">Case 2</h3>
     <code>
-       Input: n = 25 <br>
-    </code>
-    <br></br>
-    <h3 style="color: #FFF">Case 3</h3>
-    <code>
-       Input: n = 1000 <br>
+        The file is too big! Download the input <a href="qData/q4/list1_hard_long.txt" download="q4">Here</a>!
     </code>
 </p>
 
