Update tuple checking task description in HTML

--- a/single.html
+++ b/single.html
@@ -207,7 +207,7 @@
                     <p style="padding-bottom: 0%">
                       Input is denoted by an array of integers <b>A</b>.  
                       <ul>
-                        <li>Your task is to find the number of tuples of 4 distinct indices (i,j,k,l) such that (A<sub>i</sub>,A<sub>j</sub>,A<sub>k</sub>,A<sub>l</sub>) = (Q,U,A,D)</li>
+                        <li>Your task is to find the number of tuples of 4 distinct indices (i,j,k,l) such that (A<sub>i</sub>,A<sub>j</sub>,A<sub>k</sub>,A<sub>l</sub>) = (A,W,A,B)</li>
                       </ul>
                       <p>WARNING! This question deducts 50 points for any wrong attempt!</p>
                       Difficulty:
