--- a/q7.html
+++ b/q7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>KL-Coding Cup</title>
+    <title>KL Coding Cup</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -35,7 +35,7 @@
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
       <aside id="colorlib-aside" role="complementary" class="js-fullheight">
         <h1 id="colorlib-logo" class="mb-4 mb-md-5">
-          <a href="index.html" style="background-color: white">KL-CC</a>
+          <a href="index.html" style="background-color: white">KLCC</a>
         </h1>
         <nav id="colorlib-main-menu" role="navigation">
           <ul>
@@ -54,7 +54,7 @@
             </li>
 
             <li>
-              <h3><a href="past_content.html">Murder Mystery Round</a></h3>
+              <h3><a href="past_content.html">Escape Room Round</a></h3>
             </li>
             <li>
               
@@ -64,34 +64,28 @@
             </li>
           </ul>
           <h3 style="padding-top: 100%">
-            <a href="https://github.com/asian-mario">Made By: Rangga & Aniish</a>
+            <a href="https://github.com/asian-mario">Made By: Rangga & Awab</a>
           </h3>
         </nav>
       </aside>
       <div id="colorlib-main">
         <section class="ftco-section ftco-no-pt ftco-no-pb">
             <div style="padding-left: 5rem; padding-right: 5rem; padding-top: 2rem; padding-bottom: 0.5rem;">
-                <h1 class="colorlib-heading">The Sequence Riddle</h1>
+                <h1 class="colorlib-heading">Tuple Checking</h1>
 <p style="color: #fff;">
-  The mastermind has left behind a series of encoded numbers. Intelligence suggests these numbers form a sequence with hidden meaning <br /><br />
-
-  Input is denoted by a list of integers nums
+  Input is denoted by a string <b>A</b>
   <ul>
-    <li>Your task is to find the length of the longest subsequence that is strictly increasing.</li>
-    <li>A subsequence is a sequence derived from the input array by deleting some or no elements without changing the order of the remaining elements.
-      For example, given nums = [10, 9, 2, 5, 3, 7, 101, 18], the LIS is [2, 3, 7, 101] with a length of 4.</li>
-    <li>Additionally, when submitting the answers, if prompted, ensure your LIS is formatted as such "x, y, z"</li>
+    <li>Your task is to find the number of tuples of 4 distinct indices (i,j,k,l) such that (A<sub>i</sub>,A<sub>j</sub>,A<sub>k</sub>,A<sub>l</sub>) = (A,W,A,B)</li>
   </ul>
+    <h3 style="color: #FFF">Example Case</h3>
+      Input: A = "AWABAB"
+      Output: 12
     <br></br>
     <h3 style="color: #FFF">Case 1</h3>
-    <code>
-      Input: nums = [3, 10, 2, 1, 20, 15, 5, 12, 16, 6, 21, 7]  <br>
-    </code>
+    Input: The input is too long! Download it <a href="qData/q7/nums_hard_2_sequence_riddle.txt" download="q7">here</a> (space seperated).  <br>
     <br></br>
     <h3 style="color: #FFF">Case 2</h3>
-    <code>
-       Input: The input is too long! Download it <a href="qData/q7/nums_hard_2_sequence_riddle.txt" download="q7">here</a> (space seperated).  <br>
-    </code>
+    Input: The input is too long! Download it <a href="qData/q7/nums_hard_2_sequence_riddle.txt" download="q7">here</a> (space seperated).  <br>
     <br></br>
 
 </p>
