--- a/q8.html
+++ b/q8.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>KL-Coding Cup</title>
+    <title>KL Coding Cup</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -35,7 +35,7 @@
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
       <aside id="colorlib-aside" role="complementary" class="js-fullheight">
         <h1 id="colorlib-logo" class="mb-4 mb-md-5">
-          <a href="index.html" style="background-color: white">KL-CC</a>
+          <a href="index.html" style="background-color: white">KLCC</a>
         </h1>
         <nav id="colorlib-main-menu" role="navigation">
           <ul>
@@ -54,7 +54,7 @@
             </li>
 
             <li>
-              <h3><a href="past_content.html">Murder Mystery Round</a></h3>
+              <h3><a href="past_content.html">Escape Room Round</a></h3>
             </li>
             <li>
               
@@ -64,34 +64,28 @@
             </li>
           </ul>
           <h3 style="padding-top: 100%">
-            <a href="https://github.com/asian-mario">Made By: Rangga & Aniish</a>
+            <a href="https://github.com/asian-mario">Made By: Rangga & Awab</a>
           </h3>
         </nav>
       </aside>
       <div id="colorlib-main">
         <section class="ftco-section ftco-no-pt ftco-no-pb">
             <div style="padding-left: 5rem; padding-right: 5rem; padding-top: 2rem; padding-bottom: 0.5rem;">
-                <h1 class="colorlib-heading">Market Interception</h1>
+                <h1 class="colorlib-heading">Palindromic addition</h1>
 <p style="color: #fff;">
-  The criminal syndicate is profiting from a volatile artifact trading market. Your mission is to determine the perfect time to buy low and sell high to intercept the syndicate's profits. <br /><br />
-
-  Input is denoted by a list of integers `prices`.  
+  Input is denoted by a list of integers <b>P</b>.  
   <ul>
-    <li>Each integer represents the price of the artifact on a given day.</li>
-    <li>Your task is to maximize profit by choosing one day to buy and one day to sell, ensuring the buying day comes before the selling day.  
-      If no profit can be made, return `0`.  
-      For example, given `prices = [7, 1, 5, 3, 6, 4]`, buy on day 2 (price = 1) and sell on day 5 (price = 6), yielding a profit of `6 - 1 = 5`.</li>
+    <li>Your task is to find the largest palindromic number that can be made by adding (NOT CONCATENATING) the numbers in the given array.</li>
   </ul>
-    <br></br>
+    <h3 style="color: #FFF">Example Case</h3>
+      Input: P = [12, 21, 33, 45]<br>
+      Output: 111<br>
+      Explanation: 12 + 21 + 33 + 45 = 111<br>
     <h3 style="color: #FFF">Case 1</h3>
-    <code>
-      Input: prices = [10, 20, 5, 15, 7, 10, 22, 1, 12]    <br>
-    </code>
+      Input: P = [13, 24, 37, 48, 59, 61, 72, 84, 95, 106, 117, 128, 139, 150, 161, 173, 184, 195, 207, 218, 229, 240, 251, 262, 273, 284, 295, 307, 318, 329, 340, 351, 362, 373, 384, 395, 407, 418, 429, 440, 451, 462, 473, 484, 495, 506, 517, 528, 539, 550]<br>
     <br></br>
     <h3 style="color: #FFF">Case 2</h3>
-    <code>
-       Input: The input is too long! Download it <a href="qData/q8/prices_hard_best_time_to_buy.txt" download="q8">here</a> (space seperated).  <br>
-    </code>
+      Input: The input is too long! Download it <a href="qData/q8/prices_hard_best_time_to_buy.txt" download="q8">here</a> (space seperated).  <br>
     <br></br>
 
 </p>
